fix googlemap overflow and border-radius on search box

--- a/wp-content/themes/march-farm/css/custom.css
+++ b/wp-content/themes/march-farm/css/custom.css
@@ -111,6 +111,7 @@ a:focus, a:hover, a:active {
 body {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
+  width: 100vw !important;
 }
 
 h1, h3, h5 {
@@ -854,7 +855,7 @@ img.video-embed-image{
     position: relative !important;
     top: 0px !important;
     left: 0px !important;
-    max-width: none;
+    max-width: 100vw;
     width: 100% !important;
     margin: 0 !important;
   }
@@ -863,7 +864,9 @@ img.video-embed-image{
 .map {
   max-height: 440px;
 }
-
+#mapDiv{
+  width: 100vw !important;
+}
 .accordion {
   background: url("../img/bg-leaves.png") no-repeat left center;
   background-color: #f1f2f3;
@@ -887,4 +890,141 @@ img.video-embed-image{
   z-index: 99999;
   position: fixed;
   bottom: 0;
+}
+/*kahlil post launch updates*/
+
+.hero {
+  background-position: bottom !important;
+}
+.card-img-top {
+  max-height: 420px !important;
+}
+.card-body {
+  min-height: 136px !important;
+}
+.videotext {
+  margin: 111px 0px !important;
+}
+.gallery {
+  padding-top: 154px !important;
+}
+.page1849 .calloutleft {
+  background-color: #f1f2f3!important;
+  padding-top: 54px;
+}
+.cta h1.display-4 {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 32px;
+  line-height: 1.3;
+  text-align: center;
+  color: #433837;
+
+  padding-right: 75px;
+}
+/* home page */
+.page1849 .eventhold h1 {
+  text-align: center;
+}
+.page1849 .eventhold p {
+  text-align: center;
+}
+.gallery a {
+  text-align: center;
+  display: block;
+  width: 100%;
+}
+.eventhold a {
+  text-align: center;
+  display: block;
+  width: 100%;
+}
+.calloutleft .callbox .flower {
+  background: url(../img/bg-leaves-right.png) no-repeat right top!important;
+}
+.videotext {
+  margin: 114px 0px !important;
+  padding-bottom: 50px;
+}
+/* family fun page */
+.page1822 .flower h2
+{
+  padding-top: 23px;
+}
+/* padding on the contact form so it doesnt touch edge */
+.calloutleft .callbox .flower .content {
+  padding: 4rem 8rem 2rem 2rem;
+  max-width: 600px;
+}
+/* hours widget */
+header.hero .hero-inner .hours div {
+  cursor: pointer;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  width: 280px;
+  height: 40px;
+  background: #dee9f2!important;
+  text-indent: 12px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.23);
+}
+
+header.hero .hero-inner .hours button {
+  float: left;
+  border: transparent;
+  background: #dee9f2!important;
+  width: 40px;
+  height: 40px;
+}
+#active-hours-text {
+  position: relative;
+  top: 7px;
+  width: 172px;
+  height: 23px;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.64;
+  text-align: left;
+  color: #757575!important;
+}
+header.hero .hero-inner .hours span {
+  position: relative;
+  top: 7px;
+  font-family: Lato;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.64;
+  text-align: left;
+  color: #757575!important;
+}
+
+body #hoursclock {
+  position: relative;
+  top: 3px;
+  cursor: pointer;
+  color: #757575 !important;
+}
+body #active-hours-arrow {
+  position: relative;
+  top: 14px;
+  right: 14px;
+  float: right;
+  border: solid #757575;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+#search-icon {
+  color: #6b98b8;
+  padding-top: 7px;
+}
+/*  / end of kahlil post launch updates*/
+
+input#wpsearch.search-field{
+  border-radius: 0 !important;
+}
+#google-map{
+  max-width: 90vw !important;
+  overflow-x: hidden !important;
 }
